--- a/.github/workflows/deno-release.yml
+++ b/.github/workflows/deno-release.yml
@@ -7,17 +7,17 @@ name: "🏁 Deno Release & JSR Publishing"
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to release (without v prefix, e.g., 1.0.0)'
+        description: "Version to release (without v prefix, e.g., 1.0.0)"
         required: true
         type: string
 
 permissions:
   contents: write
-  id-token: write  # Required for JSR provenance
+  id-token: write # Required for JSR provenance
 
 jobs:
   deno-validate-tag:
@@ -35,7 +35,7 @@ jobs:
             VERSION="${{ github.event.inputs.version }}"
             TAG_NAME="v${VERSION}"
             echo "Using manual input version: $VERSION"
-            
+
             # Check if tag exists
             if ! git tag -l | grep -q "^${TAG_NAME}$"; then
               echo "❌ Tag ${TAG_NAME} does not exist!"
@@ -49,14 +49,14 @@ jobs:
             VERSION="${TAG_NAME#v}"
             echo "Using git tag: $TAG_NAME"
           fi
-          
+
           # Validate version format (semantic versioning)
           if [[ ! "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+(-(alpha|beta|rc)\.[0-9]+)?$ ]]; then
             echo "❌ Invalid version format: $VERSION"
             echo "Expected format: X.Y.Z or X.Y.Z-alpha.N"
             exit 1
           fi
-          
+
           echo "✅ Valid version: $VERSION (tag: $TAG_NAME)"
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
@@ -67,7 +67,7 @@ jobs:
     needs: [deno-validate-tag]
     steps:
       - name: "✅ Validation: Verify Deno CI Success"
-        uses: actions/github-script@v7
+        uses: actions/github-script@4da74d82a6a0e0e5b12e1e8e994be6e4f13b0ff1 # v7
         with:
           script: |
             const { data: workflows } = await github.rest.actions.listWorkflowRuns({
@@ -77,18 +77,18 @@ jobs:
               head_sha: context.sha,
               status: 'completed'
             });
-            
+
             const ciRun = workflows.workflow_runs[0];
             if (!ciRun) {
               core.setFailed('No Deno CI workflow run found for this commit');
               return;
             }
-            
+
             if (ciRun.conclusion !== 'success') {
               core.setFailed(`Deno CI Pipeline failed with status: ${ciRun.conclusion}`);
               return;
             }
-            
+
             console.log('✅ Deno CI Pipeline passed successfully');
 
   deno-build-binaries:
@@ -107,9 +107,10 @@ jobs:
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
       - name: "🦕 Runtime: Setup Deno"
-        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2
+        uses: denoland/setup-deno@v2.0.3
         with:
-          deno-version: v2.x
+          deno-version: v2.4
+          cache-hash: ${{ hashFiles('**/deno.json') }}
 
       - name: "🏷️ Version: Extract from Tag"
         id: get_version
@@ -239,15 +240,16 @@ jobs:
     name: "🦕 Deno JSR: Publish Package"
     runs-on: ubuntu-latest
     needs: [deno-create-release]
-    if: ${{ !contains(needs.deno-create-release.outputs.version, '-') }}  # Only for stable releases
+    if: ${{ !contains(needs.deno-create-release.outputs.version, '-') }} # Only for stable releases
     steps:
       - name: "📥 Repository: Checkout Code"
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
       - name: "🦕 Runtime: Setup Deno"
-        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2
+        uses: denoland/setup-deno@v2.0.3
         with:
-          deno-version: v2.x
+          deno-version: v2.4
+          cache-hash: ${{ hashFiles('**/deno.json') }}
 
       - name: "🔍 Validation: Dry Run Publish"
         run: deno publish --dry-run
@@ -262,7 +264,7 @@ jobs:
           VERSION="${{ needs.deno-create-release.outputs.version }}"
           echo "Waiting for JSR package propagation..."
           sleep 30
-          
+
           # Verify package is available (when JSR API supports it)
           echo "Package published: https://jsr.io/@gander/mikrus@$VERSION"
 
@@ -285,7 +287,7 @@ jobs:
         run: |
           VERSION="${{ needs.deno-create-release.outputs.version }}"
           DOWNLOAD_URL="https://github.com/gander-tools/mikrus/releases/download/v$VERSION/${{ matrix.binary }}"
-          
+
           if [ "$RUNNER_OS" = "Windows" ]; then
             curl -LO "$DOWNLOAD_URL"
           else
@@ -300,15 +302,15 @@ jobs:
           else
             VERSION_OUTPUT=$(./${{ matrix.binary }} --version)
           fi
-          
+
           echo "Version output: $VERSION_OUTPUT"
-          
+
           # Verify version format
           if [[ ! "$VERSION_OUTPUT" =~ mikrus\ [0-9]+\.[0-9]+\.[0-9]+ ]]; then
             echo "❌ Version output format incorrect: $VERSION_OUTPUT"
             exit 1
           fi
-          
+
           echo "✅ Version test passed"
 
       - name: "🔍 Integration: Help Test"
@@ -318,13 +320,13 @@ jobs:
           else
             HELP_OUTPUT=$(./${{ matrix.binary }} --help)
           fi
-          
+
           echo "Help output preview:"
           echo "$HELP_OUTPUT" | head -10
-          
+
           if [[ ! "$HELP_OUTPUT" =~ "Command-line interface tool for managing VPS servers" ]]; then
             echo "❌ Help output missing expected description"
             exit 1
           fi
-          
+
           echo "✅ Help test passed"
