--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,50 @@
 {
+  "name": "@gander-tools/mikrus",
+  "version": "0.0.1",
+  "description": "Command-line interface tool for managing VPS servers on mikr.us platform (Deno + Cliffy)",
+  "license": "MIT",
+  "keywords": [
+    "cli",
+    "vps",
+    "mikr.us",
+    "server-management",
+    "hosting",
+    "deno",
+    "cliffy"
+  ],
+  "author": {
+    "name": "Adam Gąsowski",
+    "url": "https://github.com/gander"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gander-tools/mikrus.git"
+  },
+  "homepage": "https://github.com/gander-tools/mikrus#readme",
+  "bugs": {
+    "url": "https://github.com/gander-tools/mikrus/issues"
+  },
+  "exports": "./mod.ts",
   "compilerOptions": {
     "lib": ["deno.window"],
     "strict": true
+  },
+  "publish": {
+    "include": [
+      "src/",
+      "tests/",
+      "README.md",
+      "LICENSE",
+      "mod.ts"
+    ],
+    "exclude": [
+      "tests/**/*.test.ts",
+      ".github/",
+      "build/",
+      "docs/",
+      "models/",
+      "coverage/"
+    ]
   },
   "imports": {
     "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.4",
